# OpenCV-Attention-and-Saliency

./: .gitignore  CMakeLists.txt  Readme.md  opencv-test.sln
data/: ImageList.csv  RetinaDefaultParameters.xml
opencv-test/: BMS.cpp  BMS.h  opencv-test.cpp  opencv-test.vcxproj
src/: BMS.cpp  README.txt  main.cpp  opencv-test.vcxproj  packages.config
